@@ -9,13 +9,15 @@ t/pod.t
 t/pod-coverage.t
 t/datetime.t
 t/xml_filter_chars.t
+t/jidsplit.t
 t/z_00_register.t
 t/z_01_message.t
 t/z_01_message_tracking.t
 t/z_02_disco.t
 t/z_03_iq_auth.t
 t/z_04_presence.t
-t/z_05_muc.t
+t/z_05_muc_detect.t
+t/z_05_muc_join.t
 t/z_05_muc2.t
 t/z_05_muc3.t
 t/z_06_iq_ping.t
