@@ -1,19 +1,5 @@
 'x' means: is done!
 
--
-   > 2 - I believe that the regex used in Util::split_jid is incorrect. 
-   > When trying to parse a jid like 'msn.im.sapo.pt', one ended up, after 
-   > rejoining, with 'msn.im.sapo.p@t'
-   > 
-   > I've tried the following regex instead and it worked:
-   > $jid =~ /^(?:([^@]+)@)*([^\/]+)\/?(.*)$/
-   > 
--
-   > Notice that, according to the RFC the domain is the only mandatory part.
-   > 1 - Is there any reason for not providing a timeout argument in the method 
-   > connect of SimpleConnection?
-
-
 - add nick_change to documentation
 - Solve probable bug in recognized string handling
   with CDATA which is parsed by expat in a seperate step.
