@@ -1,6 +1,8 @@
 Revision history for Net-XMPP2
 
 0.12
+         - replaced the big and unmaintainable MUC test by some smaller
+           tests.
          - fixed a bug with disconnect event propagation by Net::XMPP2::Client
          - added a socket_timeout argument to Net::XMPP2::Connection and
            added an interface for setting it to ::SimpleConnection.
